# Gomoku

./: .gitignore  CMakeLists.txt  CPPLINT.cfg
.github/workflows/: googletest.yml  linters.yml
src/: CMakeLists.txt
src/includes/: Board.h  Color.h  Coord.h  Piece.h  Player.h
src/lib/: Board.cpp  Coord.cpp  Piece.cpp
tests/: CMakeLists.txt  test_board.cpp  test_coord.cpp  test_piece.cpp
